# wmoov-movie-scraper

./: .gitignore  CRUSH.md  README.md  big_scraper.py  bigdemo.cast  debug_website.py  pyproject.toml  simple_scraper.py  simpledemo.cast  test_scraper.py
wmoov_scraper/: __init__.py  date_utils.py  main.py  models.py  processor.py  scraper.py
